[project]
name = "scienceai-llm"
version = "0.1.3"
authors = [{name="Elias Weston-Farber", email="elias@eliastechlabs.com"}]
description = "An AI powered scientific literature search engine"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["PyMuPDF", "openai", "tiktoken", "habanero", "flask", "flask-sock", "dictdatabase", "pandas"]
[project.scripts]
scienceai = "scienceai.__main__:main"
[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
[tool.setuptools.package-data]
scienceai = ["static/*", "static/json-viewer/*", "templates/*", "io/*", "*.json", "*.txt"]
[project.urls]
url = "https://github.com/elias-jhsph/scienceai"
[options]
python_requires = ">=3.11"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
