[project]
name = "scienceai-llm"
version = "0.1.6"
authors = [{name="Elias Weston-Farber", email="elias@eliastechlabs.com"}]
description = "An AI powered scientific literature search engine"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["PyMuPDF>=1.24.5", "openai>=1.34.0", "tiktoken>=0.7.0", "habanero>=1.2.6", "flask>=3.0.3", "flask-sock>=0.7.0", "dictdatabase>=2.5.0", "pandas>=2.2.2"]
[project.scripts]
scienceai = "scienceai.__main__:main"
[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
[tool.setuptools.package-data]
scienceai = ["static/*", "static/json-viewer/*", "templates/*", "io/*", "*.json", "*.txt"]
[project.urls]
url = "https://github.com/elias-jhsph/scienceai"
[options]
python_requires = ">=3.11"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
